完成卡通人物

--- a/blog-vue/public/index.html
+++ b/blog-vue/public/index.html
@@ -23,15 +23,14 @@
         theme="#F58EA8"
         server="netease"
         type="playlist"
-        id="768991704"
+        id="408894554"
         fixed="true"
         autoplay="true"
         loop="all"
         order="random"
         preload="auto"
-        list-folded="ture"
-        list-max-height="200px"
->
+        list-folded="true"
+        list-max-height="200px">
 </meting-js>
 </body>
 </html>
