--- a/blog-vue/public/index.html
+++ b/blog-vue/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="referrer" content="no-referrer"/>
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <title>Starry-Blog | 你的美好，我都记得</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id="app"></div>
-<script color="122 103 238" count="99" opacity='0.7' pointcolor="0,0,255" src="./canvas-nest.js"
+<script color="122 103 238" count="99" opacity='0.7' pointcolor="0,0,255" src="canvas-nest.js"
         type="text/javascript"
         zindex="-1"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
