--- a/blog-vue/public/index.html
+++ b/blog-vue/public/index.html
@@ -16,9 +16,9 @@
 <script color="122 103 238" count="99" opacity='0.7' pointcolor="0,0,255" src="canvas-nest.js"
         type="text/javascript"
         zindex="-1"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
-<script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
+<link rel="stylesheet" href="./APlayer.min.css">
+<script src="./APlayer.min.js"></script>
+<script src="./Meting.min.js"></script>
 <meting-js
         theme="#F58EA8"
         server="netease"
